new additions to the webpage

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,10 +6,13 @@ website:
   title: "William Okech"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
-
+      - text: Home
+        href: index.qmd
+      - text: About
+        href: index.qmd
+      - text: Courses
+        href: courses.qmd
+        
 format:
   html:
     theme:
